P4PU-1067 updated test